# bacon

./: .dictionary.txt  .spellcheck.yml  Cargo.toml  LICENSE  README.md  TODO  build.rs
.github/workflows/: auto-merge.yml  release.yml  rust.yml  spell-check.yml
src/: constants.rs  ivp.rs  lib.rs
src/differentiate/: mod.rs
src/integrate/: gaussian.rs  mod.rs  tables.rs
src/interp/: mod.rs  spline.rs
src/ivp/: adams.rs  bdf.rs  mod.rs  rk.rs
src/optimize/: mod.rs
src/polynomial/: mod.rs
src/roots/: mod.rs  polynomial.rs
src/special/: mod.rs
src/special/polynomial/: mod.rs
src/tests/: mod.rs
src/tests/differentiate/: mod.rs
src/tests/integrate/: mod.rs
src/tests/interp/: mod.rs  spline.rs
src/tests/ivp/: adams.rs  bdf.rs  euler.rs  mod.rs  rk.rs
src/tests/optimize/: mod.rs
src/tests/polynomial/: mod.rs  operations.rs
src/tests/roots/: mod.rs  polynomial.rs
src/tests/special/: mod.rs
src/tests/special/polynomial/: mod.rs
