[package]
name = "bacon-sci"
version = "0.12.0"
authors = ["aftix <aftix@aftix.xyz>"]
edition = "2018"
license="MIT"
description="Scientific computing in Rust"
homepage="https://github.com/aftix/bacon"
repository="https://github.com/aftix/bacon"
readme="README.md"
keywords=["numeric", "science", "integration", "quadrature"]
categories=["science"]

[dev-dependencies]
float-cmp="0.8"
rand="0.8"

[dependencies]
nalgebra="0.24"
num-complex="0.3"
num-traits="0.2"
phf = "0.8"

[build-dependencies]
phf_codegen = "0.8"
