[package]
name = "bacon-sci"
version = "0.13.1"
authors = ["aftix <aftix@aftix.xyz>"]
edition = "2021"
license="MIT"
description="Scientific computing in Rust"
homepage="https://github.com/aftix/bacon"
repository="https://github.com/aftix/bacon"
readme="README.md"
keywords=["numeric", "science", "integration", "quadrature"]
categories=["science"]

[dev-dependencies]
float-cmp="0.8"
rand="0.8"

[dependencies]
nalgebra="=0.29.0"
typenum="=1.14"
num-complex="=0.4.0"
num-traits="=0.2.14"
phf = "=0.8"

[build-dependencies]
phf_codegen = "0.8"
