[package]
name = "bacon-sci"
version = "0.14.0"
authors = ["aftix <aftix@aftix.xyz>"]
edition = "2021"
license="MIT"
description="Scientific computing in Rust"
homepage="https://github.com/aftix/bacon"
repository="https://github.com/aftix/bacon"
readme="README.md"
keywords=["numeric", "science", "integration", "quadrature"]
categories=["science"]

[dev-dependencies]
float-cmp="0.9"
rand="0.8"

[dependencies]
nalgebra="0.32"
typenum="1.17"
num-complex="0.4"
num-traits="0.2"
phf = "0.11"
thiserror = "1.0"

[build-dependencies]
phf_codegen = "0.11"
